# pi-mono

./: .gitignore  AUDIT_NOTES.md
rust/: Cargo.toml  README.md
rust/apps/pi/: Cargo.toml
rust/apps/pi/src/: main.rs
rust/crates/pi-agent/: Cargo.toml
rust/crates/pi-agent/src/: agent.rs  error.rs  lib.rs  loop.rs  message.rs  partial_json.rs  proxy.rs  state.rs  tool.rs  validation.rs
rust/crates/pi-agent/tests/: agent.rs  agent_loop.rs  proxy.rs
rust/crates/pi-ai/: Cargo.toml  REVIEW_QUEUE_pi-ai.md  REVIEW_pi-ai.md  REVIEW_pi-ai_SUMMARY.md  WAVE2B_DEFERRED.md  clippy.txt  deps.txt
rust/crates/pi-ai/src/: anthropic_messages.rs  lib.rs  main.rs  models.catalog.json  models.rs  oauth.rs  openai_codex_responses.rs  openai_completions.rs  openai_responses.rs  overflow.rs  partial_json.rs  provider_http.rs  retry.rs  unicode.rs
rust/crates/pi-ai/tests/: anthropic_messages_http.rs  anthropic_messages_params.rs  anthropic_messages_stream.rs  anthropic_messages_transport.rs  cache_retention.rs  catalog_cli.rs  cli.rs  cross_provider_handoff.rs  empty_messages.rs  faux_provider.rs  image_tool_result.rs  max_retry_delay.rs  models.rs  openai_codex_fixture_compat.rs  openai_codex_responses_http.rs  openai_codex_responses_stream.rs  openai_codex_responses_transport.rs  openai_completions_http.rs  openai_completions_messages.rs  openai_completions_params.rs  openai_completions_stream.rs  openai_completions_tool_call_id.rs  openai_completions_transport.rs  openai_completions_usage.rs  openai_responses_http.rs  openai_responses_params.rs  openai_responses_payload.rs  openai_responses_provider.rs  openai_responses_reasoning_replay.rs  openai_responses_service_tier.rs  openai_responses_sse_parse.rs  openai_responses_stream.rs  openai_responses_transport.rs  openai_tool_call_provider_compat.rs  overflow.rs  response_id.rs  simple_stream.rs  tool_call_without_result.rs  unicode_request_text.rs
rust/crates/pi-coding-agent-cli/: Cargo.toml
rust/crates/pi-coding-agent-cli/src/: args.rs  auth.rs  export_html.rs  file_processor.rs  initial_message.rs  lib.rs  list_models.rs  package_commands.rs  package_manager.rs  print_mode.rs  resources.rs  rpc_client.rs  rpc_extensions.rs  runner.rs  session_picker.rs  tree_picker.rs
rust/crates/pi-coding-agent-cli/tests/: args.rs  dynamic_tools.rs  extension_commands.rs  extension_lifecycle_hooks.rs  extension_providers.rs  extension_tools_hooks.rs  file_processor.rs  print_mode.rs  resources.rs  rpc.rs  rpc_client.rs  rpc_session_events.rs  rpc_support_utilities.rs  runner.rs  thinking_budgets.rs  tool_selection.rs  transport.rs
rust/crates/pi-coding-agent-core/: Cargo.toml
rust/crates/pi-coding-agent-core/src/: auth.rs  bootstrap.rs  compaction.rs  config_value.rs  footer_data.rs  frontmatter.rs  lib.rs  messages.rs  model_registry.rs  model_resolver.rs  prompt_templates.rs  resource_loader.rs  resource_types.rs  runtime.rs  session_cwd.rs  session_manager.rs  skill_block.rs  skills.rs  system_prompt.rs  tree_navigation.rs
rust/crates/pi-coding-agent-core/tests/: agent_session.rs  agent_session_features.rs  auth.rs  bootstrap.rs  compaction.rs  compaction_file_ops.rs  custom_model_fallback_metadata.rs  footer_data.rs  messages.rs  model_registry.rs  model_resolver.rs  resources.rs  runtime.rs  runtime_api_parity.rs  runtime_from_session.rs  runtime_reload.rs  session_cwd.rs  session_history_api.rs  session_manager.rs  skill_block.rs  support_utilities.rs  system_prompt.rs  tree_navigation.rs  tree_navigation_runtime.rs
rust/crates/pi-coding-agent-tools/: Cargo.toml
rust/crates/pi-coding-agent-tools/src/: bash.rs  edit.rs  find.rs  grep.rs  image.rs  lib.rs  ls.rs  path_utils.rs  read.rs  truncate.rs  write.rs
rust/crates/pi-coding-agent-tools/tests/: bash_edit.rs  image_resize.rs  read_write.rs  search_tools.rs  tool_sets.rs
rust/crates/pi-coding-agent-tui/: Cargo.toml
rust/crates/pi-coding-agent-tui/src/: assistant_message.rs  bash_execution.rs  bordered_loader.rs  branch_summary.rs  clipboard_image.rs  compaction_summary.rs  config_selector.rs  custom_editor.rs  custom_message.rs  dialog_countdown.rs  extension_editor.rs  extension_input.rs  extension_selector.rs  footer.rs  interactive_binding.rs  keybinding_hints.rs  keybindings.rs  lib.rs  login_dialog.rs  model_selector.rs  oauth_selector.rs  pending_messages.rs  scoped_models_selector.rs  selector_common.rs  session_selector.rs  session_selector_search.rs  settings_selector.rs  show_images_selector.rs  skill_invocation.rs  startup_header.rs  startup_shell.rs  theme.rs  theme_selector.rs  thinking_selector.rs  tool_execution.rs  transcript.rs  tree_selector.rs  user_message.rs  user_message_selector.rs
rust/crates/pi-coding-agent-tui/tests/: assistant_message.rs  bordered_loader.rs  branch_summary.rs  clipboard_image.rs  compaction_summary.rs  custom_editor.rs  custom_message.rs  extension_dialogs.rs  extension_editor.rs  footer.rs  interactive_binding.rs  keybinding_hints.rs  keybindings.rs  selectors.rs  skill_invocation.rs  startup_header.rs  startup_shell.rs  theme.rs  tool_execution.rs  user_message.rs  user_message_selector.rs
rust/crates/pi-config/: Cargo.toml
rust/crates/pi-config/src/: lib.rs
rust/crates/pi-config/tests/: settings.rs
rust/crates/pi-core/: Cargo.toml
rust/crates/pi-core/src/: lib.rs
rust/crates/pi-events/: Cargo.toml
rust/crates/pi-events/src/: lib.rs
rust/crates/pi-json-utils/: Cargo.toml
rust/crates/pi-json-utils/src/: lib.rs
rust/crates/pi-test-harness/: Cargo.toml
rust/crates/pi-tui/: Cargo.toml
rust/crates/pi-tui/src/: autocomplete.rs  box_component.rs  dynamic_border.rs  editor.rs  fuzzy.rs  image.rs  input.rs  keybindings.rs  keys.rs  kill_ring.rs  lib.rs  loader.rs  markdown.rs  select_list.rs  settings_list.rs  spacer.rs  stdin_buffer.rs  terminal.rs  terminal_image.rs  text.rs  truncated_text.rs  tui.rs  undo_stack.rs  utils.rs
rust/crates/pi-tui/tests/: autocomplete.rs  editor.rs  fuzzy.rs  generic_components.rs  image.rs  input.rs  (+11 more)
rust/support/: extension-sidecar.mjs
rust/support/extension-runtime/: index.mjs
(+16 files in other folders)
