[package]
name = "pi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pi-ai = { path = "../../crates/pi-ai" }
pi-coding-agent-cli = { path = "../../crates/pi-coding-agent-cli" }
pi-coding-agent-core = { path = "../../crates/pi-coding-agent-core" }
tokio.workspace = true
