[package]
name = "pi-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-stream.workspace = true
futures.workspace = true
pi-ai = { path = "../pi-ai" }
pi-events = { path = "../pi-events" }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
