[package]
name = "pi-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-stream.workspace = true
futures.workspace = true
parking_lot.workspace = true
pi-ai = { path = "../pi-ai" }
pi-events = { path = "../pi-events" }
pi-json-utils = { path = "../pi-json-utils" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
indexmap = "2"
