[package]
name = "pi-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-stream.workspace = true
futures.workspace = true
pi-events = { path = "../pi-events" }
regex = "1"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true

[dev-dependencies]
httpmock = "0.7"
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
