[package]
name = "pi-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-stream.workspace = true
base64 = "0.22"
futures.workspace = true
httpdate = "1"
pi-events = { path = "../pi-events" }
pi-json-utils = { path = "../pi-json-utils" }
rand = "0.8"
regex = "1"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true

[dev-dependencies]
httpmock = "0.7"
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
