[package]
name = "pi-coding-agent-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
pi-agent = { path = "../pi-agent" }
pi-ai = { path = "../pi-ai" }
pi-coding-agent-core = { path = "../pi-coding-agent-core" }
pi-coding-agent-tools = { path = "../pi-coding-agent-tools" }
pi-events = { path = "../pi-events" }
pi-tui = { path = "../pi-tui" }
serde_json.workspace = true

[dev-dependencies]
futures.workspace = true
tokio.workspace = true
