[package]
name = "pi-coding-agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
globset = "0.4"
pi-agent = { path = "../pi-agent" }
pi-ai = { path = "../pi-ai" }
pi-coding-agent-tools = { path = "../pi-coding-agent-tools" }
pi-events = { path = "../pi-events" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
