[package]
name = "pi-coding-agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-stream.workspace = true
futures.workspace = true
globset = "0.4"
ignore = "0.4"
pi-agent = { path = "../pi-agent" }
pi-ai = { path = "../pi-ai" }
pi-coding-agent-tools = { path = "../pi-coding-agent-tools" }
pi-events = { path = "../pi-events" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio.workspace = true
