[package]
name = "pi-coding-agent-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
pi-agent = { path = "../pi-agent" }
pi-events = { path = "../pi-events" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
