[package]
name = "pi-coding-agent-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "bmp"] }
pi-agent = { path = "../pi-agent" }
pi-coding-agent-core = { path = "../pi-coding-agent-core" }
pi-events = { path = "../pi-events" }
pi-tui = { path = "../pi-tui" }
regex = "1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
pi-ai = { path = "../pi-ai" }
tempfile = "3"
tokio.workspace = true
